istio/observability/telemetry.yaml
# EnvoyFilter for custom metrics
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: finflow-custom-metrics
  namespace: finflow
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.wasm
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            config:
              root_id: "finflow_metrics"
              vm_config:
                runtime: "envoy.wasm.runtime.null"
                code:
                  local:
                    inline_string: "envoy.wasm.metadata_exchange"
